--- a/src/styles.scss
+++ b/src/styles.scss
@@ -119,6 +119,15 @@ address {
   padding:0;
 }
 
+.screenDialog{
+  width:100%;
+  min-width:100%;
+  max-width:100%;
+  height:100%;
+  margin:0;
+  padding:0;
+}
+
 .imgWrp img{
   width:calc( 100% - 35px );
   height:calc( 100% - 35px );
