--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -41,3 +41,8 @@ h2 {
 button:focus {
   border: 1px solid var(--on-surface);
 }
+
+svg {
+  -webkit-filter: invert(100%); /* safari 6.0 - 9.0 */
+  filter: invert(100%);
+}
