--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -43,6 +43,8 @@ button:focus {
 }
 
 svg {
-  -webkit-filter: invert(100%); /* safari 6.0 - 9.0 */
-  filter: invert(100%);
+  path {
+    fill: var(--on-surface);
+  }
 }
+
