--- a/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.html
+++ b/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="qr_header">
     <button mat-icon-button (click)="close();">
-      <mat-icon>arrow_back</mat-icon>
+      <mat-icon>close</mat-icon>
     </button>
   </div>
 </ars-screen>
