--- a/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.scss
+++ b/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.scss
@@ -4,13 +4,14 @@
   width:100%;
   height:64px;
   position:absolute;
-  left:0px;
+  right:0px;
   top:0px;
   background-color:#FFFFFF;
 }
 
 .qr_header>button{
-  margin-left:16px;
+  float: right;
+  margin-right:16px;
   margin-top:12px;
   color:#000000;
 }
