--- a/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.scss
+++ b/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.scss
@@ -1,34 +1,38 @@
 
-
-.qr_header{
-  width:100%;
-  height:64px;
-  position:absolute;
-  right:0px;
-  top:0px;
-  background-color:#FFFFFF;
+.qr_header {
+  width: 100%;
+  height: 64px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  background-color: #FFFFFF;
 }
 
-.qr_header>button{
+.qr_header > button {
   float: right;
-  margin-right:16px;
-  margin-top:12px;
-  color:#000000;
+  margin-right: 16px;
+  margin-top: 12px;
+  color: #000000;
 }
 
-.qr_content{
-  background-repeat:no-repeat;
-  background-position:center;
-  background-size:contain;
-  width:100%;
-  height:calc(100% - 64px);
-  position:absolute;
-  left:0px;
+.qr_content {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 100%;
+  height: calc(100% - 64px);
+  position: absolute;
+  left: 0px;
   image-rendering: pixelated;
-  top:64px;
-  background-color:#FFFFFF;
+  top: 64px;
+  background-color: #FFFFFF;
 }
 
-.qr_content img{
-  display:none;
+.qr_content img {
+  display: none;
+}
+
+.test{
+  position: absolute;
+  right: 20px;
 }
