Remove unneccessary important

--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -14,8 +14,8 @@ mat-toolbar {
 }
 
 ::ng-deep .qrcode svg > path{
-  fill: var(--on-surface) !important;
-  color: var(--on-surface) !important;
+  fill: var(--on-surface);
+  color: var(--on-surface);
 }
 
 .moderation-enabled {
