--- a/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.scss
+++ b/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.scss
@@ -1,33 +1,63 @@
 
-
-.qr_header{
-  width:100%;
-  height:64px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  background-color:#FFFFFF;
+.qr_header {
+  width: 100%;
+  height: 64px;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  background-color: #FFFFFF;
 }
 
-.qr_header>button{
-  margin-left:16px;
-  margin-top:12px;
-  color:#000000;
+.qr_header > button {
+  margin-right: 16px;
+  margin-top: 12px;
+  position: fixed; /* or position: absolute; */
+  top: 0;
+  right: 0;
+  color: #000000;
 }
 
-.qr_content{
-  background-repeat:no-repeat;
-  background-position:center;
-  background-size:contain;
-  width:100%;
-  height:calc(100% - 64px);
-  position:absolute;
-  left:0px;
+.qr_content {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 100%;
+  height: calc(100% - 64px);
+  position: absolute;
+  left: 0px;
   image-rendering: pixelated;
-  top:64px;
-  background-color:#FFFFFF;
+  top: 64px;
+  background-color: #FFFFFF;
 }
 
-.qr_content img{
-  display:none;
+.qr_content img {
+  display: none;
+}
+
+a {
+  color: blue;
+}
+
+//mobile devices
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  .qrheader {
+    padding-left: 11%;
+    padding-top: 35%
+  }
+}
+
+//tablets
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  .qrheader {
+    padding-left: 11%;
+    padding-top: 20%
+  }
+}
+
+//desktops
+@media only screen and (min-width: 1224px) {
+  .qrheader {
+    padding-left: 25em;
+    padding-top: 3em
+  }
 }
