--- a/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.html
+++ b/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.html
@@ -6,7 +6,9 @@
     <button mat-icon-button (click)="close();">
       <mat-icon>close</mat-icon>
     </button>
-    <h2 class="qrheader" style="color: black!important;" >https://frag.jetzt
-      <br>Sitzung: {{qrCode.substring(28, 32)}} {{qrCode.substring(32, 36)}}</h2>
+    <div class="qr_text" #text>
+      <h2>https://frag.jetzt
+        <br>Sitzung: {{qrCode.substring(28, 32)}} {{qrCode.substring(32, 36)}}</h2>
+    </div>
   </div>
 </ars-screen>
