fix heading color

--- a/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.scss
+++ b/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.scss
@@ -8,8 +8,8 @@
   background-color: #FFFFFF;
 }
 
-.qr_header > h2{
-  color:black;
+.qr_text > h2{
+  color:black!important;
 }
 
 .qr_header > button {
