--- a/projects/ars/src/lib/components/content/dialog/dialog-base/dialog-base.component.html
+++ b/projects/ars/src/lib/components/content/dialog/dialog-base/dialog-base.component.html
@@ -1,25 +1,35 @@
 <ars-style-typography-material>
-  <ars-screen class="dialog">
-    <div class="dialog-align-vertical" #vertAlign>
-      <div class="dialog-align-horizontal" #hortAlign>
-        <div class="dialog-container-header">
-          <h1 class="dialog-typo-title">
-            {{title}}
-          </h1>
-        </div>
-        <div class="dialog-container-content" #containerContent>
-          <p class="typo-page-p">
-            {{description}}
-          </p>
-        </div>
-        <div class="dialog-container-footer">
-          <button *ngFor="let button of btn" (click)="onButtonClick(button);">
-            {{button.name}}
-          </button>
+  <ars-style-button-material>
+    <ars-screen class="dialog" cdkTrapFocus (click)="closeByOverlay($event);">
+      <div class="dialog-align-vertical" #vertAlign>
+        <div class="dialog-align-horizontal" #hortAlign>
+          <div class="dialog-container-header">
+            <h1 class="dialog-typo-title" tabindex="0">
+              {{title}}
+            </h1>
+          </div>
+          <div class="dialog-container-content" tabindex="-1" #containerContent>
+            <p class="typo-page-p" tabindex="0">
+              {{description}}
+            </p>
+          </div>
+          <div class="dialog-container-footer">
+            <div class="dialog-container-footer-btn">
+              <button ars-btn *ngFor="let button of btn"
+                      class="btn-row"
+                      [ariaLabel]="button.ariaLabel"
+                      [title]="button.title"
+                      (click)="onButtonClick(button);">
+                <p>
+                  {{button.name}}
+                </p>
+              </button>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </ars-screen>
+    </ars-screen>
+  </ars-style-button-material>
 </ars-style-typography-material>
 
 <!--
