--- a/projects/ars/src/lib/components/content/dialog/dialog-base/dialog-base.component.html
+++ b/projects/ars/src/lib/components/content/dialog/dialog-base/dialog-base.component.html
@@ -1,6 +1,9 @@
 <ars-style-typography-material>
   <ars-style-button-material>
     <ars-screen class="dialog" cdkTrapFocus (click)="closeByOverlay($event);">
+      <div class="dialog-limbo">
+        <div tabindex="0">Dialog. Tab to continue. Escape to close dialog</div>
+      </div>
       <div class="dialog-align-vertical" #vertAlign>
         <div class="dialog-align-horizontal" #hortAlign>
           <div class="dialog-container-header">
