--- a/projects/ars/src/lib/components/content/dialog/dialog-base/dialog-base.component.scss
+++ b/projects/ars/src/lib/components/content/dialog/dialog-base/dialog-base.component.scss
@@ -79,4 +79,9 @@ $dialog-button-space-between:12px;
       line-height:24px;
     }
   }
+  &-limbo{
+    width:0;
+    height:0;
+    overflow:hidden;
+  }
 }
