remove scroll-bug, imprint header distance

--- a/projects/ars/src/lib/components/content/dialog/dialog-box-content/dialog-box-content.component.scss
+++ b/projects/ars/src/lib/components/content/dialog/dialog-box-content/dialog-box-content.component.scss
@@ -22,7 +22,8 @@
       width:100%;
       display:flex;
       flex-direction:column;
-      overflow-y:auto;
+      overflow-y:scroll;
+      -webkit-overflow-scrolling:touch;
       box-sizing:border-box;
     }
     &-footer{
