--- a/projects/ars/src/lib/components/content/dialog/dialog-fullscreen/dialog-fullscreen.component.html
+++ b/projects/ars/src/lib/components/content/dialog/dialog-fullscreen/dialog-fullscreen.component.html
@@ -16,8 +16,8 @@
         </ng-content>
       </ars-fill>
     </ars-row>
-    <ars-fill [overflow]="'hidden'">
-      <ars-resp ars-scroll [width]="600" [margin]="24" [fillHeight]="true" [scroll]="'vertical'">
+    <ars-fill [overflow]="'scroll'">
+      <ars-resp [width]="600" [margin]="24" [fillHeight]="true">
         <ng-content select="[content]"></ng-content>
       </ars-resp>
     </ars-fill>
