menus, better responsive wrapper

--- a/projects/ars/src/lib/components/test/layout/frame/frame-test/frame-test.component.html
+++ b/projects/ars/src/lib/components/test/layout/frame/frame-test/frame-test.component.html
@@ -3,7 +3,7 @@
   <ars-screen ars-flex-box>
     <ars-row [height]="1"></ars-row>
     <ars-fill [overflow]="'hidden'">
-      <ars-resp ars-scroll [width]="750" [margin]="30">
+      <ars-flex-align [width]="750" [margin]="30">
 
         <ars-row [height]="300"></ars-row>
 
@@ -107,7 +107,7 @@
 
         <ars-row [height]="160"></ars-row>
 
-      </ars-resp>
+      </ars-flex-align>
     </ars-fill>
     <ars-row [height]="1"></ars-row>
   </ars-screen>
