--- a/projects/ars/src/lib/components/layout/base/flex-align/flex-align.component.scss
+++ b/projects/ars/src/lib/components/layout/base/flex-align/flex-align.component.scss
@@ -1,7 +1,7 @@
+
 :host{
-  width:100%;
-  height:auto;
-  float:left;
   display:flex;
+  flex-grow:1;
+  overflow:hidden;
   justify-content:center;
 }
