--- a/src/app/components/shared/questionwall/question-wall/question-wall.component.html
+++ b/src/app/components/shared/questionwall/question-wall/question-wall.component.html
@@ -47,6 +47,63 @@
       </ars-fill>
     </ars-fill>
     <ars-col [width]="450" [overflow]="'auto'" class="questionwall-list" #colComponent>
+
+      <div style="width:100%;height:100%;" ars-flex-box>
+        <ars-row>
+          <ars-row *ngIf="hasFilter" [height]="50" class="questionwall-list-filter">
+            <ars-style-btn-material style="width:100%;height:100%;" ars-flex-box>
+              <ars-col ars-btn-wrp [xp]="48">
+                <button ars-btn><p>{{filterTitle | translate}} {{filterDesc}}</p></button>
+              </ars-col>
+              <ars-fill></ars-fill>
+              <ars-col ars-btn-wrp [xp]="48">
+                <button ars-btn (click)="deactivateFilter()"><i>remove_circle</i><p>remove filter</p></button>
+              </ars-col>
+            </ars-style-btn-material>
+          </ars-row>
+        </ars-row>
+        <ars-fill>
+          <cdk-virtual-scroll-viewport *ngIf="init" [itemSize]="100" style="width:100%;height:100%;">
+            <ars-row *cdkVirtualFor="let comment of hasFilter?commentsFilter:comments"
+                     class="questionwall-comment-anchor" [id]="comment.comment.id">
+              <ars-row style="box-sizing:border-box;padding:8px;">
+                <ars-row
+                  [ngClass]="comment===commentFocus?'questionwall-comment-border-on':'questionwall-comment-border-off'"
+                  style="border-radius:5px">
+                  <ars-row ars-flex-box
+                           (click)="focusComment(comment)"
+                           style="box-sizing:border-box;padding:16px;cursor:pointer">
+                    <ars-col class="questionwall-comment-meta">
+                      <i class="questionwall-icon">person</i>
+                      <p (click)="filterUser(comment);" class="questionwall-comment-user">{{comment.comment.userNumber}}</p>
+                      <p class="questionwall-comment-timestamp">{{comment.timeAgo}}</p>
+                    </ars-col>
+                    <ars-col>
+                      <p class="questionwall-comment-notification">{{comment.old?'':'NEW'}}</p>
+                    </ars-col>
+                  </ars-row>
+                  <ars-row
+                    (click)="focusComment(comment)"
+                    style="box-sizing:border-box;padding:0 16px;cursor:pointer">
+                    <p class="questionwall-comment-body">{{comment.comment.body}}</p>
+                  </ars-row>
+                  <ars-row [height]="50">
+                    <ars-style-btn-material style="width:100%;height:100%;" ars-flex-box>
+                      <ars-col ars-btn-wrp [xp]="16" [extra]="true" class="questionwall-comment-btn">
+                        <button ars-btn (click)="likeComment(comment)"><i>thumb_up</i><p>{{comment.comment.score}}</p></button>
+                        <button ars-btn (click)="dislikeComment(comment)"><i>thumb_down</i></button>
+                      </ars-col>
+                      <ars-fill (click)="focusComment(comment)" style="cursor:pointer"></ars-fill>
+                    </ars-style-btn-material>
+                  </ars-row>
+                </ars-row>
+              </ars-row>
+            </ars-row>
+          </cdk-virtual-scroll-viewport>
+        </ars-fill>
+      </div>
+
+      <!--
       <ars-row *ngIf="hasFilter" class="questionwall-list-filter" [height]="45">
         <ars-style-btn-material style="width:100%;height:100%;" ars-flex-box>
           <ars-col ars-btn-wrp [xp]="48">
@@ -58,6 +115,9 @@
           </ars-col>
         </ars-style-btn-material>
       </ars-row>
+      -->
+
+      <!--
       <ars-row *ngFor="let comment of hasFilter?commentsFilter:comments" class="questionwall-comment-anchor">
         <ars-row style="box-sizing:border-box;padding:8px;">
           <ars-row
@@ -73,13 +133,6 @@
               </ars-col>
               <ars-col>
                 <p class="questionwall-comment-notification">{{comment.old?'':'NEW'}}</p>
-              </ars-col>
-              <ars-col>
-<!--                <ars-style-btn-material>-->
-<!--                  <ars-col ars-btn-wrp [xp]="16" [extraStart]="true" class="questionwall-comment-btn">-->
-<!--                    <button ars-btn><i>{{comment.comment.favorite?'star':'star_border'}}</i></button>-->
-<!--                  </ars-col>-->
-<!--                </ars-style-btn-material>-->
               </ars-col>
             </ars-row>
             <ars-row
@@ -99,6 +152,8 @@
           </ars-row>
         </ars-row>
       </ars-row>
+      -->
+
     </ars-col>
   </ars-fill>
     <ars-row [height]="50" class="questionwall-footer">
