--- a/src/app/components/shared/questionwall/question-wall/question-wall.component.scss
+++ b/src/app/components/shared/questionwall/question-wall/question-wall.component.scss
@@ -81,10 +81,9 @@
     }
     &-list{
       box-sizing:border-box;
-      padding:16px 0px;
+      //padding:16px 0px;
       border-left:solid 1px var(--ars-border-color);
       &-filter{
-        border-top:solid 1px var(--ars-border-color);
         border-bottom:solid 1px var(--ars-border-color);
       }
     }
