--- a/src/app/components/shared/questionwall/question-wall-comment/question-wall-comment.component.scss
+++ b/src/app/components/shared/questionwall/question-wall-comment/question-wall-comment.component.scss
@@ -18,4 +18,12 @@
   .comment-outer{
     border-bottom:solid 1px var(--ars-border-color);
   }
+  .comment-notification{
+    font-size:12px;
+    text-transform:uppercase;
+    letter-spacing:2px;
+    line-height:18px;
+    font-weight:600;
+    color: #cc4244;
+  }
 }
