--- a/src/app/components/shared/questionwall/question-wall-comment/question-wall-comment.component.html
+++ b/src/app/components/shared/questionwall/question-wall-comment/question-wall-comment.component.html
@@ -1,9 +1,13 @@
 <ars-row class="comment-outer" (click)="focusComment()">
   <ars-row [height]="50">
-    <ars-style-btn-material style="width:100%;height:100%;">
+    <ars-style-btn-material style="width:100%;height:100%;" ars-flex-box>
       <ars-col ars-btn-wrp [xp]="32">
         <button ars-btn (click)="filterUser()"><i>person</i><p>{{comment.comment.userNumber}}</p></button>
         <button ars-btn><p>{{comment.timeAgo}}</p></button>
+      </ars-col>
+      <ars-fill></ars-fill>
+      <ars-col ars-btn-wrp [xp]="32">
+        <button ars-btn *ngIf="!comment.old"><p>NEW</p></button>
       </ars-col>
     </ars-style-btn-material>
   </ars-row>
