--- a/src/app/components/shared/questionwall/question-wall/question-wall.component.html
+++ b/src/app/components/shared/questionwall/question-wall/question-wall.component.html
@@ -12,10 +12,18 @@
       <ars-fill ars-flex-box>
         <ars-fill></ars-fill>
         <ars-col ars-btn-wrp [xp]="16" [extra]="true">
+          <!--
           <button ars-btn (click)="sortTime()"><p>{{'question-wall.sort-time' | translate}}</p><i>expand_less</i></button>
           <button ars-btn (click)="sortTime(true)"><i>expand_more</i></button>
           <button ars-btn (click)="sortScore()"><p>{{'question-wall.sort-score' | translate}}</p><i>expand_less</i></button>
           <button ars-btn (click)="sortScore(true)"><i>expand_more</i></button>
+          -->
+          <mat-menu #sortMenu>
+            <button mat-menu-item (click)="sortTime(true)">Newest</button>
+            <button mat-menu-item (click)="sortTime()">Oldest</button>
+            <button mat-menu-item (click)="sortScore(true)">Most Popular</button>
+          </mat-menu>
+          <button ars-btn [mat-menu-trigger-for]="sortMenu"><i>sort</i><p>Sort</p></button>
           <button ars-btn (click)="filterFavorites()"><i>star</i><p>{{'question-wall.filter-favorite' | translate}}</p></button>
         </ars-col>
       </ars-fill>
@@ -48,19 +56,30 @@
     </ars-fill>
     <ars-col [width]="450" ars-flex-box class="questionwall-list">
       <ars-row>
+        <!-- Filter -->
         <ars-row *ngIf="hasFilter" [height]="50" class="questionwall-list-filter">
           <ars-style-btn-material style="width:100%;height:100%;" ars-flex-box>
-            <ars-col>
-              <p>{{filterTitle}} {{filterDesc}}</p>
+            <ars-col ars-btn-wrp [xp]="16" [extra]="true">
+              <button ars-btn><i>filter</i><p>{{filterTitle | translate}} {{filterDesc}}</p></button>
+              <button ars-btn (click)="deactivateFilter()"><i>remove_circle</i><p>remove filter</p></button>
             </ars-col>
             <ars-fill>
             </ars-fill>
-            <ars-col>
-              <button (click)="deactivateFilter()">deactivate</button>
+          </ars-style-btn-material>
+        </ars-row>
+      </ars-row>
+      <!-- Load More -->
+      <ars-row *ngIf="unloadedComments.length>0" class="questionwall-list-filter">
+        <ars-row [height]="50">
+          <ars-style-btn-material style="width:100%;height:100%" ars-flex-box>
+            <ars-col ars-btn-wrp [xp]="16" [extra]="true">
+              <button ars-btn (click)="loadUnreadComments()"><i>smoke_free</i><p>Load All {{unloadedComments.length}}</p></button>
+              <button ars-btn (click)="loadNextUnreadComment()"><i>smoking_rooms</i><p>Load Next</p></button>
             </ars-col>
           </ars-style-btn-material>
         </ars-row>
       </ars-row>
+      <!-- Comments -->
       <ars-fill *ngIf="init">
         <cdk-virtual-scroll-viewport [itemSize]="100" style="width:100%;height:100%;">
           <app-question-wall-comment *cdkVirtualFor="let comment of hasFilter?commentsFilter:comments"
@@ -69,7 +88,9 @@
         </cdk-virtual-scroll-viewport>
       </ars-fill>
       <ars-fill *ngIf="!init">
-        <p>LOADING</p>
+        <div class="questionwall-spinner-out">
+          <mat-progress-spinner class="questionwall-spinner-in" mode="indeterminate"></mat-progress-spinner>
+        </div>
       </ars-fill>
       <!--
       <ars-row *ngIf="hasFilter" class="questionwall-list-filter" [height]="45">
