--- a/src/app/components/shared/questionwall/question-wall-comment/question-wall-comment.component.html
+++ b/src/app/components/shared/questionwall/question-wall-comment/question-wall-comment.component.html
@@ -1,9 +1,9 @@
-<ars-row class="comment-outer" (click)="focusComment()">
-  <ars-row [height]="50">
+<ars-row class="comment-outer" [ngClass]="comment===commentFocus?'comment-foc':'comment-unfoc'" (click)="focusComment()">
+  <ars-row [height]="35">
     <ars-style-btn-material style="width:100%;height:100%;" ars-flex-box>
-      <ars-col ars-btn-wrp [xp]="32">
+      <ars-col ars-btn-wrp [xp]="16" [extra]="true">
         <button ars-btn (click)="filterUser()"><i>person</i><p>{{comment.comment.userNumber}}</p></button>
-        <button ars-btn><p>{{comment.timeAgo}}</p></button>
+        <button ars-btn class="comment-btn"><p>{{comment.timeAgo}}</p></button>
       </ars-col>
       <ars-fill></ars-fill>
       <ars-col ars-btn-wrp [xp]="32">
@@ -16,9 +16,9 @@
       <p>{{comment.comment.body}}</p>
     </ars-row>
   </ars-row>
-  <ars-row [height]="50">
+  <ars-row [height]="35">
     <ars-style-btn-material style="width:100%;height:100%;">
-      <ars-col ars-btn-wrp [xp]="16" [extra]="true">
+      <ars-col ars-btn-wrp [xp]="16" [extra]="true" class="comment-btn">
         <button ars-btn (click)="like()"><i>thumb_up</i><p style="padding-left:8px">{{comment.comment.score}}</p></button>
         <button ars-btn (click)="dislike()"><i>thumb_down</i></button>
       </ars-col>
