--- a/src/app/components/shared/questionwall/question-wall/question-wall.component.html
+++ b/src/app/components/shared/questionwall/question-wall/question-wall.component.html
@@ -25,6 +25,7 @@
           </mat-menu>
           <button ars-btn [mat-menu-trigger-for]="sortMenu"><i>sort</i><p>Sort</p></button>
           <button ars-btn (click)="filterFavorites()"><i>star</i><p>{{'question-wall.filter-favorite' | translate}}</p></button>
+          <button ars-btn (click)="scrollToTop()"><p>SCROLLTOP</p></button>
         </ars-col>
       </ars-fill>
     </ars-style-btn-material>
@@ -81,9 +82,9 @@
       </ars-row>
       <!-- Comments -->
       <ars-fill *ngIf="init">
-        <cdk-virtual-scroll-viewport [itemSize]="100" style="width:100%;height:100%;">
+        <cdk-virtual-scroll-viewport [itemSize]="100" style="width:100%;height:100%;" id="questionwall-virtual-scroll">
           <app-question-wall-comment *cdkVirtualFor="let comment of hasFilter?commentsFilter:comments"
-                                     [comment]="comment" (action)="execTask($event);">
+                                     [comment]="comment" [commentFocus]="commentFocus" (action)="execTask($event);">
           </app-question-wall-comment>
         </cdk-virtual-scroll-viewport>
       </ars-fill>
