reformat html and improving tabflow

--- a/src/assets/i18n/data-protection/data-protection.scss
+++ b/src/assets/i18n/data-protection/data-protection.scss
@@ -1,6 +1,8 @@
 h2 {
-  padding-top: 20px;
-  font-size: 4em;
+  font-size: 19px !important;
+  line-height: 1.1em !important;
+  margin-bottom: 8px !important;
+  text-transform: none !important;
 }
 
 p {
