--- a/src/app/components/home/_dialogs/data-protection/data-protection.component.html
+++ b/src/app/components/home/_dialogs/data-protection/data-protection.component.html
@@ -1,9 +1,9 @@
 <div>
-  <h2 tabindex="0" mat-dialog-title class="modal oldtypo-h2">{{ 'data-protection.title' | translate }}</h2>
+  <h1 tabindex="0" mat-dialog-title>{{ 'data-protection.title' | translate }}</h1>
 
   <mat-divider></mat-divider>
 
-  <mat-dialog-content tabindex="0">
+  <mat-dialog-content tabindex="-1">
     <app-data-protection-en *ngIf="currentLang=='en'"></app-data-protection-en>
     <app-data-protection-de *ngIf="currentLang=='de'"></app-data-protection-de>
 
