--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,20 @@
 <script src="models/rescale.ts"></script>
 <div fxLayout="column" fxFill appTheme id="outer_main_container">
+
+  <div class="a11y-box">
+
+    <button (click)="playAudioGuide();" mat-button>
+      <mat-icon>volume_up</mat-icon>
+      <span>Audio Guide</span>
+    </button>
+
+    <button (click)="createFeedback();" mat-button>
+      <mat-icon>accessibility</mat-icon>
+      <span>Accessibility Feedback</span>
+    </button>
+
+  </div>
+
   <header class="header" id="header_rescale">
     <app-header #header></app-header>
   </header>
